src/objects/ProxyObject__c.object
<CustomObject>
    <label>Proxy Object</label>
    <nameField>
        <label>ProxyObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProxyObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>BatchId__c</fullName>
        <inlineHelpText>This represents a stimestamp for this proxy object</inlineHelpText>
        <label>Batch Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External Id coming from the third party system</inlineHelpText>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FinalJSON__c</fullName>
        <label>FinalJSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JSON__c</fullName>
        <inlineHelpText>This field stores a JSON format data structure which belongs to the proxy object.</inlineHelpText>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field links this proxy object to its parent object</inlineHelpText>
        <label>Parent</label>
        <referenceTo>ProxyObject__c</referenceTo>
        <relationshipName>ProxyObjects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes whether this has been previously processed.</inlineHelpText>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <inlineHelpText>This is the third party system where the data is coming from</inlineHelpText>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The entity type this object represents</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>